# inline-snapshot

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  appveyor.yml  codi.py  conftest.py  example.py  index.html  mkdocs.yml  mutex_queue  mutmut_config.py  noxfile.py  objects.inv  pyproject.toml  pytest_inline_snapshot.py  redeploy_docs.sh  requirements.txt  setup.cfg  setup.py  sitemap.xml  test-repos.json  tox.ini  versions.json
(customize preview)/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
(customize preview)/alternatives/: index.html
(customize preview)/categories/: index.html  index.md
(customize preview)/changelog/: index.html
(customize preview)/cmp_snapshot/: index.html
(customize preview)/code_generation/: index.html  index.md
(customize preview)/configuration/: index.md  (+1 more)
(customize preview)/plugins/: pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.inline-snapshot/: files_using_external.txt
0.12/: 404.html  index.html  sitemap.xml
0.13/: 404.html  index.html  sitemap.xml
0.14/: 404.html  index.html  sitemap.xml
0.15/: 404.html  index.html  sitemap.xml
0.16/: 404.html  index.html  sitemap.xml
0.17/: 404.html  index.html  sitemap.xml
0.18/: 404.html  index.html  sitemap.xml
0.19/: 404.html  index.html  sitemap.xml
0.20/: 404.html  index.html  sitemap.xml
0.21/: 404.html  index.html  sitemap.xml
0.22/: 404.html  index.html  sitemap.xml
0.23/: 404.html  index.html  sitemap.xml
0.25/: 404.html  index.html  llms.txt  sitemap.xml
0.26/: 404.html  index.html  llms.txt  sitemap.xml
0.27/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
0.28/: 404.html  index.html  index.md  llms.txt  sitemap.xml
0.29/: 404.html  index.html  index.md  llms.txt  sitemap.xml
0.30/: 404.html  index.html  llms.txt  sitemap.xml
0.31/: 404.html  index.html  llms.txt  sitemap.xml
0.32/: 404.html  index.html  index.md  llms.txt  sitemap.xml
0.33/: 404.html  index.html  index.md  llms.txt  sitemap.xml
0.34/: 404.html  index.html  index.md  llms.txt  sitemap.xml
categories/: index.html
changelog/: index.html
changelog.d/: 20240917_192956_15r10nk-git_fix_dirty_equals.md  20240924_150856_15r10nk-git_fix_dirty_equals_bug.md  20241107_083558_15r10nk-git_tomli.md  20241108_192001_15r10nk-git_fix_cli.md  20241108_232134_15r10nk-git_fix_cli.md  20241109_074441_15r10nk-git_fix_cli.md  20241113_170718_15r10nk-git_fixes.md  20241113_170944_15r10nk-git_fixes.md  20241204_073038_15r10nk-git.md  20241204_183031_15r10nk-git.md  20241205_075841_15r10nk-git_fix_144_fstring.md  20241210_063450_15r10nk-git_container.md  20241210_204219_15r10nk-git_fix_148.md  20241212_074058_15r10nk-git_warns.md  20241214_071645_15r10nk-git_attrs.md  20241216_180533_15r10nk-git_disable_inline_snapshot_in_ci.md  20241217_195629_15r10nk-git_fix_sets.md  20241220_120136_Pawamoy_snapshot_dir_config.md  20241220_173346_15r10nk-git_pydantic_v1.md  20241220_221301_Pawamoy_find_pyproject_upper_dirs.md  20241222_102321_15r10nk-git.md  20250101_115301_15r10nk-git_fix_pydantic_warning_169.md  20250102_104344_15r10nk-git_sys_executable.md  20250106_220025_15r10nk-git_format_cmd.md  20250109_071706_15r10nk-git_format_cmd.md  20250112_121000_15r10nk-git_pydantic_ai_fixes.md  20250112_213028_15r10nk-git_pydantic_ai_fixes.md  20250115_130342_15r10nk-git_fix_pydantic_ai_errors.md  20250115_192048_15r10nk-git_pydantic_fix_assert.md  20250118_083011_15r10nk-git_refactor.md  20250131_085021_15r10nk-git_preparations.md  20250201_085056_15r10nk-git_preparations.md  20250201_113239_15r10nk-git.md  20250202_081752_15r10nk-git_new_defaults.md  20250204_075508_15r10nk-git.md  20250211_230349_15r10nk-git_bugfixing.md  20250228_070255_15r10nk-git_fix_click.md  20250303_211759_15r10nk-git.md  20250304_203623_15r10nk-git.md  20250312_073749_15r10nk-git_fix_xdist.md  (+71 more)
cmp_snapshot/: index.html
code_generation/: index.html
configuration/: index.html
contributing/: index.html
customize_repr/: index.html
development/: 404.html  index.html  index.md  llms.txt  objects.inv  sitemap.xml
development-0.13/: 404.html  index.html  sitemap.xml
docs/: alternatives.md  categories.md  changelog.md  cmp_snapshot.md  code_generation.md  configuration.md  customize.md  customize_repr.md  eq_snapshot.md  external.md  extra.md  extras.md  fix_assert.md  get_snapshot_value.md  getitem_snapshot.md  in_snapshot.md  index.md  insiders.md  limitations.md  outsource.md  plugin.md  pycharm.md  pytest.md  register_repr.md  snapshot_arg.md  testing.md  third_party.md  types.md
eq_snapshot/: index.html
extra/: index.html
getitem_snapshot/: index.html
in_snapshot/: index.html
inline_snapshot/: __init__.py  _align.py  _change.py  _code_repr.py  _config.py  _external.py  _find_external.py  _format.py  _inline_snapshot.py  _location.py  _pandas.py  _rewrite_code.py  _sentinels.py  _types.py  _utils.py  pytest_plugin.py
outsource/: index.html
pytest/: index.html
scripts/: clean_changelog_fragments.py  replace_words.py  test_downstream.py
search/: search_index.json
testing/: generate_tests.py  index.html
tests/: _is_normalized.py  conftest.py  example.py  test_ai_report.py  test_align.py  test_bugs.py  test_builder.py  test_change.py  test_change_collection_error.py  test_ci.py  test_code_repr.py  test_config.py  test_customize.py  test_dataclass.py  test_datetime_timezone.py  test_dirty_equals.py  test_docs.py  test_encoding.py  test_example.py  test_external.py  test_external_formats.py  test_external_location.py  test_external_storage_uuid.py  test_factory_adapter.py  test_formating.py  test_formatting.py  test_fstring.py  test_get_snapshot_value.py  test_hasrepr.py  test_inline_snapshot.py  test_is.py  test_is_normalized.py  test_is_transformed.py  test_move_files.py  test_multi_threading.py  test_pandas.py  test_preserve_values.py  test_pydantic.py  test_pypy.py  test_pytest_diff_fix.py  (+19 more)
theme/: main.html
types/: index.html
(+679 files in other folders)
