[metadata]
name = pytest_inline_snapshot
version = 0.1.0
description = create and update inline snapshots in your code to simplify testcase creation
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/15r10nk/pytest-inline-snapshot
author = Frank Hoffmann
author_email = 15r10nk@polarbit.de
maintainer = Frank Hoffmann
maintainer_email = 15r10nk@polarbit.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing

[options]
packages = inline_snapshot
install_requires =
    asttokens
    executing
    pytest>=3.5.0
python_requires = >=3.6

[options.entry_points]
pytest11 =
    inline-snapshot = inline_snapshot.pytest_plugin
